bk_ida/gccida/g0/subreg_lowpart_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_lowpart_p/src/emit-rtl.c:1764:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_lowpart_p/src/emit-rtl.c:1765:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)) == x[1]; 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/subreg_lowpart_p/src/obj/emit-rtl.o] Error 1
